# vibe-relay

./: .gitignore  AGENTROLES.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  calculator.py  pyproject.toml  vibe-relay.config.json.example
.claude/: settings.json
Phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
agents/: coder.md  designer.md  orchestrator.md  plan_reviewer.md  planner.md  researcher.md  reviewer.md  scoper.md  security.md  spec.md  synthesizer.md  tester.md
api/: app.py  deps.py  models.py  routes.py  ws.py
db/: client.py  migrations.py  schema.py  state_machine.py
docs/plans/: 2026-02-24-phase-4-api-websocket.md  2026-02-24-phase-5-ui.md  2026-02-24-phase-6-end-to-end-wiring.md
runner/: __init__.py  claude.py  context.py  git_utils.py  launcher.py  recorder.py  triggers.py  worktree.py
scripts/: auto_approve_monitor.py  seed_test_task.py
tests/: test_api.py  test_calculator.py  test_claude.py  test_context.py  test_db.py  test_full_loop.py  test_launcher.py  test_mcp_tools.py  test_recorder.py  test_sdlc.py  test_state_machine.py  test_trigger_helpers.py  test_triggers.py  test_workflow_validator.py  test_worktree.py  test_ws.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  styles.css  types.ts
ui/src/api/: client.ts  projects.ts  tasks.ts
ui/src/components/: AgentLogViewer.tsx  Board.tsx  CommentThread.tsx  NewProjectModal.tsx  TaskCard.tsx  (+5 more)
vibe_relay/: cli.py  config.py  workflow_validator.py
vibe_relay/mcp/: __init__.py  events.py  server.py  tools.py
(+6 files in other folders)
