[project]
name = "vibe-relay"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlmodel>=0.0.16",
  "pydantic>=2.0",
  "mcp>=1.0.0",
  "click>=8.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

[project.scripts]
vibe-relay = "vibe_relay.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibe_relay*", "api*", "db*", "runner*"]
